--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
     padding: 30px;
     width: 50%;
     height: 100%;
-    border: 1px solid lightgray;
+    border: 1px solid yellow;
     display: flex;
     flex-wrap: wrap;
     align-content: center;
